[gd_scene load_steps=4 format=2]

[ext_resource path="res://Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Viewports" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 639.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 639, 540 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera1" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
current = true
process_mode = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 4.0
drag_margin_left = 0.15
drag_margin_top = 0.15
drag_margin_right = 0.15
drag_margin_bottom = 0.15
script = ExtResource( 3 )

[node name="Level" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 640, 540 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
current = true
process_mode = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 4.0
drag_margin_left = 0.15
drag_margin_top = 0.15
drag_margin_right = 0.15
drag_margin_bottom = 0.15
script = ExtResource( 3 )
